@@ -1,0 +1,8 @@
+include $(top_srcdir)/common/python.mk
+
+SUBDIRS = \
+	wma \
+	wmv
+
+# We do not install __init__.py since it would override flumotion's
+EXTRA_DIST = __init__.py
